--- a/src/bsdfs/SConscript
+++ b/src/bsdfs/SConscript
@@ -28,6 +28,9 @@ plugins += env.SharedLibrary('hk', ['hk.cpp'])
 plugins += env.SharedLibrary('null', ['null.cpp'])
 plugins += env.SharedLibrary('thindielectric', ['thindielectric.cpp'])
 
+# Glittery materials
+plugins += env.SharedLibrary('glittery', ['glint/glittery.cpp'])
+
 # The Irawan-Marschner plugin uses a Boost::Spirit parser, which makes it
 # pretty heavy stuff to compile. Go easy on the compiler flags:
 irawanEnv = env.Clone()
