--- a/src/bsdfs/SConscript
+++ b/src/bsdfs/SConscript
@@ -31,6 +31,9 @@ plugins += env.SharedLibrary('thindielectric', ['thindielectric.cpp'])
 # Glittery materials
 plugins += env.SharedLibrary('glittery', ['glint/glittery.cpp'])
 
+# Iridescent materials
+plugins += env.SharedLibrary('irid', ['IridescentMicrofacet.cpp'])
+
 # The Irawan-Marschner plugin uses a Boost::Spirit parser, which makes it
 # pretty heavy stuff to compile. Go easy on the compiler flags:
 irawanEnv = env.Clone()
