--- a/src/bsdfs/SConscript
+++ b/src/bsdfs/SConscript
@@ -34,6 +34,9 @@ plugins += env.SharedLibrary('glittery', ['glint/glittery.cpp'])
 # Iridescent materials
 plugins += env.SharedLibrary('irid', ['IridescentMicrofacet.cpp'])
 
+# Layered materials
+plugins += env.SharedLibrary('layeredconductor', ['layeredconductor.cpp'])
+
 # The Irawan-Marschner plugin uses a Boost::Spirit parser, which makes it
 # pretty heavy stuff to compile. Go easy on the compiler flags:
 irawanEnv = env.Clone()
